[gd_scene load_steps=15 format=3 uid="uid://dcj0eo7whwfmr"]

[ext_resource type="Script" path="res://Scripts/Comic/comic.gd" id="1_52n25"]
[ext_resource type="Texture2D" uid="uid://cx25pllnohth2" path="res://Comic/transición/sketch1710813891967.png" id="1_80mx5"]
[ext_resource type="Texture2D" uid="uid://cgboejqpnv3nq" path="res://Comic/transición/skectchch.PNG" id="2_uvrdf"]
[ext_resource type="Texture2D" uid="uid://dn3hikpy8atbm" path="res://Comic/transición/sketch1710813924246.png" id="3_wcru3"]
[ext_resource type="Texture2D" uid="uid://ycx3f5kv5myx" path="res://Comic/transición/sketch1710813935769.png" id="4_edb3v"]
[ext_resource type="Texture2D" uid="uid://blx731klfphna" path="res://Comic/transición/ffqfqfqfq.PNG" id="5_dd1j6"]
[ext_resource type="Texture2D" uid="uid://bvre8juvgpn6m" path="res://Comic/transición/scerjjhee.PNG" id="6_yk4s0"]
[ext_resource type="Texture2D" uid="uid://b7o1o67d14kuf" path="res://Comic/transición/sketch1710813975620.png" id="7_aqktj"]
[ext_resource type="Texture2D" uid="uid://cmp36qug4erc6" path="res://Nuevo/Nuevo/Oficina/Captura-removebg-preview (1).png" id="9_5oe2q"]
[ext_resource type="AudioStream" uid="uid://sbjn4122xwny" path="res://Nuevo/「Frutos-del-Mar」Riki-Musso-Cover-by-marty281-_152kbit_Opus_.mp3" id="10_cyb0e"]

[sub_resource type="FontFile" id="FontFile_n2ntq"]
resource_local_to_scene = true
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_sfoni"]
resource_name = "Comic"
length = 2.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Viñetas/EdificioAlto:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(315, 439), Vector2(578, 210)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Viñetas/EdificioAlto:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Viñetas/Puerta y Agua:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Viñetas/Puerta y Agua:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Viñetas/Puerta y Agua:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1353, 758), Vector2(872, 473)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Viñetas/Manos y felicidad:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(452, 826), Vector2(456, 422)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Viñetas/Manos y felicidad:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Viñetas/Manos y felicidad:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Viñetas/Contrato:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1196, 606), Vector2(1196, 292)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Viñetas/Contrato:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Viñetas/Contrato:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Viñetas/Mano:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(2, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Viñetas/Mano:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Viñetas/Trato y corrida:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(2.3, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-124, 121), Vector2(259, 121)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Viñetas/Trato y corrida:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(2.3, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Viñetas/Trato y corrida:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Siguiente:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_lh8dj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Viñetas/EdificioAlto:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(315, 439)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Viñetas/EdificioAlto:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Viñetas/Puerta y Agua:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Viñetas/Puerta y Agua:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Viñetas/Puerta y Agua:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(872, 473)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Viñetas/Manos y felicidad:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(452, 826)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Viñetas/Manos y felicidad:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Viñetas/Manos y felicidad:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Viñetas/Contrato:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1196, 606)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Viñetas/Contrato:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Viñetas/Contrato:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Viñetas/Mano:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Viñetas/Mano:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Viñetas/Trato y corrida:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-124, 121)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Viñetas/Trato y corrida:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Viñetas/Trato y corrida:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Siguiente:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6yqy"]
_data = {
"Comic": SubResource("Animation_sfoni"),
"RESET": SubResource("Animation_lh8dj")
}

[node name="Comic" type="Node2D"]
script = ExtResource("1_52n25")

[node name="Viñetas" type="Node2D" parent="."]

[node name="FondoComic" type="Sprite2D" parent="Viñetas"]
self_modulate = Color(1, 1, 1, 0.960784)
position = Vector2(576, 321)
scale = Vector2(0.578, 0.536667)
texture = ExtResource("1_80mx5")

[node name="Trato y corrida" type="Sprite2D" parent="Viñetas"]
visible = false
self_modulate = Color(1, 1, 1, 0)
position = Vector2(-124, 121)
scale = Vector2(0.574968, 0.502179)
texture = ExtResource("2_uvrdf")

[node name="Contrato" type="Sprite2D" parent="Viñetas"]
visible = false
self_modulate = Color(1, 1, 1, 0)
position = Vector2(1196, 606)
scale = Vector2(0.583, 0.723333)
texture = ExtResource("3_wcru3")

[node name="Mano" type="Sprite2D" parent="Viñetas"]
visible = false
self_modulate = Color(1, 1, 1, 0)
position = Vector2(1438, 361)
texture = ExtResource("4_edb3v")

[node name="Manos y felicidad" type="Sprite2D" parent="Viñetas"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(452, 826)
texture = ExtResource("5_dd1j6")

[node name="Puerta y Agua" type="Sprite2D" parent="Viñetas"]
visible = false
self_modulate = Color(1, 1, 1, 0)
position = Vector2(872, 473)
scale = Vector2(0.968439, 1)
texture = ExtResource("6_yk4s0")

[node name="EdificioAlto" type="Sprite2D" parent="Viñetas"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(315, 439)
scale = Vector2(0.5885, 0.723333)
texture = ExtResource("7_aqktj")

[node name="Siguiente" type="TextureButton" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
offset_left = 927.0
offset_top = 308.0
offset_right = 1137.0
offset_bottom = 410.0

[node name="Siguiente" type="Sprite2D" parent="Siguiente"]
position = Vector2(112, 49)
scale = Vector2(0.224, 0.267917)
texture = ExtResource("9_5oe2q")

[node name="Label" type="Label" parent="Siguiente/Siguiente"]
offset_left = -473.214
offset_top = -89.5801
offset_right = 392.786
offset_bottom = 227.42
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_n2ntq")
theme_override_font_sizes/font_size = 100
text = "Seguir"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e6yqy")
}

[node name="Intro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_cyb0e")

[connection signal="mouse_entered" from="Siguiente" to="." method="_on_siguiente_mouse_entered"]
[connection signal="mouse_exited" from="Siguiente" to="." method="_on_siguiente_mouse_exited"]
[connection signal="pressed" from="Siguiente" to="." method="_on_siguiente_pressed"]
